--- a/templates/gallery/new.html.twig
+++ b/templates/gallery/new.html.twig
@@ -1,33 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ایجاد گالری جدید{% endblock %}
+{% block title %}Create new gallery{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <button class="btn btn-danger mt-3 mb-3 d-block ms-auto" onclick="history.back()">بازگشت</button>
+{#        <button class="btn btn-danger mt-3 mb-3 d-block ms-auto" onclick="history.back()">بازگشت</button>#}
             <ul>
                 {% for error in app.flashes('notice') %}
                     <li>{{ error }}</li>
                 {% endfor %}
             </ul>
 
-        <h3 class="mt-2 mb-5">افزودن گالری جدید:</h3>
+        <h3 class="mt-2 mb-5">add new gallery:</h3>
         <form action="{{ path('save_gallery') }}" method="post" class="row g-3" autocomplete="off">
             <input type="hidden" name="id" value="{{ gallery.id ?? '' }}">
             <div class="row">
                 <div class="col-md-4">
-                    <label for="inputTitle" class="form-label">عنوان گالری</label>
+                    <label for="inputTitle" class="form-label">title</label>
                     <input type="text" name="title" value="{{ gallery.title ?? '' }}" class="form-control" id="inputTitle">
                 </div>
                 <div class="col-md-4">
-                    <label for="inputSlug" class="form-label">اسلاگ</label>
+                    <label for="inputSlug" class="form-label">slug</label>
                     <input type="text" name="slug" value="{{ gallery.slug ?? '' }}" class="form-control" id="inputSlug">
                 </div>
 
             </div>
             <div class="row mt-2">
                 <div class="col-md-4">
-                    <label for="select2categories" class="form-label d-block">دسته بندی</label>
+                    <label for="select2categories" class="form-label d-block">category</label>
                     <select name="categories[]" class="js-example-responsive" multiple="multiple" style="width: 100%" id="select2categories">
                         {% for category in categories %}
                             <option {{ (gallery is defined and category.id in gallery.getCategoriesArray) ? 'selected' : '' }} value="{{ category.id }}">{{ category.title }}</option>
@@ -35,7 +35,7 @@
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <label for="select2tags" class="form-label d-block">برچسب ها</label>
+                    <label for="select2tags" class="form-label d-block">tags</label>
                     <select name="tags[]" class="js-example-responsive" multiple="multiple" style="width: 100%" id="select2tags">
                         {% for tag in tags %}
                             <option {{ (gallery is defined and tag.id in gallery.getTagsArray) ? 'selected' : '' }} value="{{ tag.id }}">{{ tag.title }}</option>
@@ -45,14 +45,14 @@
             </div>
             <div class="row mt-2">
                 <div class="col-md-6">
-                    <label for="inputDescription" class="form-label">توضیحات</label>
+                    <label for="inputDescription" class="form-label">description</label>
                     <textarea class="form-control" name="description" id="inputDescription">{{ gallery.description ?? '' }}</textarea>
                 </div>
             </div>
 
             <div class="col-12">
                 <button type="submit" class="btn btn-primary">
-                    {{ gallery is defined ? 'ذخیره' : 'افزودن' }}
+                    {{ gallery is defined ? 'save' : 'add' }}
                 </button>
             </div>
         </form>
