--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}افزودن فایل جدید{% endblock %}
+{% block title %}add new media{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <button class="btn btn-danger mt-3 mb-3 d-block ms-auto" onclick="history.back()">بازگشت</button>
+{#        <button class="btn btn-danger mt-3 mb-3 d-block ms-auto" onclick="history.back()">بازگشت</button>#}
             <ul id="notice_wrapper">
                 {% for error in app.flashes('notice') %}
                     <li>{{ error }}</li>
                 {% endfor %}
             </ul>
 
-        <h3 class="mt-2 mb-5">افزودن فایل جدید:</h3>
+        <h3 class="mt-2 mb-5">add new media:</h3>
         <form id="uploadForm" action="{{ path('save_post') }}" method="post" enctype="multipart/form-data" class="row g-3" autocomplete="off">
             <input type="hidden" name="id" value="{{ post.id ?? '' }}">
             <input type="hidden" name="id_gallery" value="{{ gallery_id }}">
@@ -24,15 +24,15 @@
 {#                    </select>#}
 {#                </div>#}
                 <div class="col-md-4">
-                    <label for="inputTitle" class="form-label">عنوان فایل</label>
+                    <label for="inputTitle" class="form-label">title</label>
                     <input type="text" name="title" value="{{ post.title ?? '' }}" class="form-control" id="inputTitle">
                 </div>
                 <div class="col-md-2" id="altWrapper">
-                    <label for="inputAlt" class="form-label">تگ alt</label>
+                    <label for="inputAlt" class="form-label">alt tag</label>
                     <input type="text" name="alt" value="{{ post.alt ?? '' }}" class="form-control" id="inputAlt">
                 </div>
                 <div class="col-md-6">
-                    <label for="select2tags" class="form-label d-block">برچسب ها</label>
+                    <label for="select2tags" class="form-label d-block">tags</label>
                     <select name="tags[]" class="js-example-responsive" multiple="multiple" style="width: 100%" id="select2tags">
                         {% for tag in tags %}
                             <option {{ (post is defined and tag.id in post.getTagsArray) ? 'selected' : '' }} value="{{ tag.id }}">{{ tag.title }}</option>
@@ -51,7 +51,7 @@
             <div class="row mt-2">
 
                 <div class="col-md-6">
-                    <label for="inputDescription" class="form-label">توضیحات</label>
+                    <label for="inputDescription" class="form-label">description</label>
                     <textarea class="form-control" id="inputDescription"  name="description">{{ post.description ?? '' }}</textarea>
                 </div>
 
@@ -62,31 +62,31 @@
                     <div class="form-check" style="display: {{ ((post is defined and post.fileName != "" and post.fileType == 'IMAGE') or (post is not defined)) ? 'block' : 'none' }}">
                         <input {{ ((post is defined and post.fileName != "" and post.fileType == 'IMAGE') or (post is not defined)) ? 'checked' : '' }} class="form-check-input" type="radio" name="type" value="image_upload" id="image_upload">
                         <label class="form-check-label" for="radioUploadImage">
-                            آپلود عکس
+                            upload image
                         </label>
                     </div>
                     <div class="form-check" style="display: {{ ((post is defined and post.fileName != "" and post.fileType == 'VIDEO') or (post is not defined)) ? 'block' : 'none' }}">
                         <input {{ ((post is defined and post.fileName != "" and post.fileType == 'VIDEO' )) ? 'checked' : '' }} class="form-check-input" type="radio" name="type" value="video_upload" id="video_upload">
                         <label class="form-check-label" for="radioUploadVideo">
-                            آپلود ویدیو
+                            upload video
                         </label>
                     </div>
                     <div class="form-check" style="display: {{ ((post is defined and post.link != "") or (post is not defined)) ? 'block' : 'none' }}">
                         <input {{ (post is defined and post.link != "") ? 'checked' : '' }} class="form-check-input" type="radio" value="image_link" name="type" id="image_link">
                         <label class="form-check-label" for="radioLinkImage">
-                            بازنشانی لینک عکس
+                            from image link
                         </label>
                     </div>
                     <div class="form-check" style="display: {{ ((post is defined and post.link != "") or (post is not defined)) ? 'block' : 'none' }}">
                         <input {{ (post is defined and post.link != "") ? 'checked' : '' }} class="form-check-input" type="radio" value="video_link" name="type" id="video_link">
                         <label class="form-check-label" for="radioLinkVideo">
-                            بازنشانی لینک ویدیو
+                            from video link
                         </label>
                     </div>
                     <div class="form-check" style="display: {{ ((post is defined and post.metaData != "") or (post is not defined)) ? 'block' : 'none' }}">
                         <input {{ (post is defined and post.metaData != "") ? 'checked' : '' }} class="form-check-input" type="radio" value="aparat" name="type" id="aparat">
                         <label class="form-check-label" for="radioAparat">
-                            ویدیو آپارات
+                            aparat video
                         </label>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                 </div>
                 {% else %}
                     <div class="col-md-6">
-                        <label for="inputFile" class="form-label">آپلود فایل</label>
+                        <label for="inputFile" class="form-label">upload file</label>
                         <input type="file" name="file_image" id="inputFile" class="form-control">
                     </div>
                 {% endif %}
@@ -132,7 +132,7 @@
                     </div>
                 {% else %}
                     <div class="col-md-6">
-                        <label for="inputFile2" class="form-label">آپلود فایل</label>
+                        <label for="inputFile2" class="form-label">upload file</label>
                         <input type="file" name="file_video" id="inputFile2" class="form-control">
                     </div>
                 {% endif %}
@@ -145,7 +145,7 @@
                     </div>
                 {% else %}
                     <div class="col-md-6 coverImageWrapper"  style="display: {{ ( ( post is defined and post.fileType == 'VIDEO') or (post is not defined) ) ? 'block' : 'none'  }}">
-                        <label for="inputCoverImage" class="form-label">آپلود تصویر کاور ویدیو</label>
+                        <label for="inputCoverImage" class="form-label">upload cover image</label>
                         <input type="file" name="video_upload_cover_image" id="inputCoverImage" class="form-control">
                     </div>
                 {% endif %}
@@ -159,24 +159,24 @@
 
             <div class="row mt-4" id="image_link_wrapper" style="display: none">
                 <div class="col-md-7">
-                    <label for="inputLink" class="form-label">لینک</label>
+                    <label for="inputLink" class="form-label">link</label>
                     <input dir="ltr" class="form-control" type="text" {{ post.link ?? '' }} name="link" id="inputLink">
                 </div>
             </div>
             <div class="row mt-4" id="video_link_wrapper" style="display: none">
                 <div class="col-md-7">
-                    <label for="inputLink" class="form-label">لینک</label>
+                    <label for="inputLink" class="form-label">link</label>
                     <input dir="ltr" class="form-control" type="text" {{ post.link ?? '' }} name="link" id="inputLink">
                 </div>
                 <div class="col-md-5 coverImageWrapper"  style="display: {{ ( (post is defined and post.fileType == 'VIDEO') or (post is not defined) ) ? 'block' : 'none'  }}">
-                    <label for="inputCoverImage" class="form-label">آپلود تصویر کاور ویدیو</label>
+                    <label for="inputCoverImage" class="form-label">upload cover image</label>
                     <input type="file" name="video_link_cover_image" id="inputCoverImage" class="form-control">
                 </div>
             </div>
 
             <div class="row mt-4" id="aparat_wrapper" style="display: none">
                 <div class="col-md-7">
-                    <label for="inputMetaData" class="form-label">کد آی فریم آپارات</label>
+                    <label for="inputMetaData" class="form-label">aparat iframe script</label>
                     <textarea dir="ltr" class="form-control"  name="meta_data" id="inputMetaData">{{ post.metaData ?? '' }}</textarea>
                 </div>
                 {% if post is defined and post.coverImage != "" %}
@@ -187,7 +187,7 @@
                     </div>
                 {% else %}
                     <div class="col-md-5 coverImageWrapper"  style="display: {{ ( (post is defined and post.fileType == 'VIDEO') or (post is not defined) ) ? 'block' : 'none'  }}">
-                        <label for="inputCoverImage" class="form-label">آپلود تصویر کاور ویدیو</label>
+                        <label for="inputCoverImage" class="form-label">upload cover image</label>
                         <input type="file" name="aparat_cover_image" id="inputCoverImage" class="form-control">
                     </div>
                 {% endif %}
@@ -195,7 +195,7 @@
 
             <div class="col-12">
                 <button type="submit" class="btn btn-primary">
-                    {{ post is defined ? 'ذخیره' : 'افزودن' }}
+                    {{ post is defined ? 'save' : 'add' }}
                 </button>
             </div>
         </form>
